# Cashout

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.yaml
cpp/: Makefile
cpp/bench/: bench_main.cpp
cpp/include/: backtest_engine.hpp  bid_model.hpp  dp_solver.hpp  event.hpp  portfolio.hpp  stern_model.hpp  strategy.hpp
cpp/tests/: test_main.cpp
docs/: Live_Parlay_Follower_Project_Spec_v2.docx
parlay_follower/: cli.py  config.py
parlay_follower/backtest/: historical_replay.py  metrics.py  policies.py  replay.py
parlay_follower/cashout/: bid_model.py  engine.py
parlay_follower/decision/: engine.py  exact_dp.py  lsmc.py  robust.py  threshold_policy.py
parlay_follower/execution/: config.py
parlay_follower/game_feed/: game_state.py  nba_feed.py
parlay_follower/live/: alerts.py  follower.py  mlb_follower.py  nba_follower.py  signal.py
parlay_follower/mlb/: feed.py  follower.py  game_context.py  game_state.py  player_model.py  win_model.py
parlay_follower/nba/: feed.py  follower.py  foul_model.py  game_context.py  momentum.py  player_model.py  stats.py  stern.py
parlay_follower/probability/: foul_model.py  game_context.py  monte_carlo.py  nleg_paths.py  player_model.py  shrinkage.py
scripts/: calibrate.py  day_one_recon.py  log_bids.py  validate_momentum.py
tests/: test_copula_mc.py  test_exact_dp.py  test_game_context.py  test_leg_resolvers.py  test_nleg_and_exit.py  test_orderbook.py  test_stern.py
tests/cpp_backtest/: CMakeLists.txt  Makefile
tests/cpp_backtest/bench/: bench_main.cpp
tests/cpp_backtest/include/: bid_model.hpp  dp_solver.hpp  event_queue.hpp  portfolio.hpp
tests/cpp_backtest/tests/: test_main.cpp
tests/cpp_backtest/tests/golden/: dp_grid_golden.csv  generate_golden.py
(+41 files in other folders)
