[project]
name = "parlay-follower"
version = "0.1.0"
description = "Live Parlay Follower: optimal cash-out timing for Kalshi NBA combos via exact dynamic programming"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project.scripts]
lpf = "parlay_follower.cli:main"
